<resources>
    <string name="app_name">CEBCareApp</string>
    <string name="ceblogo">CEBLogo</string>
    <string name="select_account_number">Select Account Number</string>

    <string-array name="account_numbers">
        <item>Select Account Number</item>
        <item>000322</item>
        <item>024243</item>
    </string-array>

    <string-array name="months">
        <item>Month</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>

    <string-array name="years">
        <item>Year</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
    </string-array>

    <string-array name="tariff">
        <item>Domestic (11)</item>
        <item>Domestic (13) TOU</item>
        <item>Industrial (21,22)-1</item>
        <item>General (31,32)-1</item>
        <item>Government (33,34)-1</item>
        <item>Hotel (41)-1</item>
        <item>Religious and Charity (51)</item>
        <item>Hotel (Bulk)-2</item>
        <item>Hotel (Bulk)-3</item>
        <item>General (Bulk)-2</item>
        <item>General (Bulk)-3</item>
        <item>Government (Bulk)-2</item>
        <item>Government (Bulk)-3</item>
        <item>Industrial (Bulk)-2</item>
        <item>Industrial (Bulk)-3</item>
    </string-array>

    <string-array name="self_generation">
        <item>Non</item>
        <item>Net Metering</item>
        <item>Net Accounting</item>
        <item>Net Plus</item>
    </string-array>

    <string-array name="complaint_types">
        <item>Select Complaint Type</item>
        <item>Supply Failure</item>
        <item>Equipment Repair</item>
        <item>Voltage Issues</item>
        <item>Property Damage</item>
        <item>Natural Hazard</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_bill_payment_with_history">BillPaymentWithHistory</string>
    <string name="tab_text_1">Bill Payment</string>
    <string name="tab_text_2">Payment History</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="dear_customer">Dear Customer,</string>
    <string name="you_are_about_to_make_an_online_payment">You are about to make an online payment.</string>
    <string name="please_carefully_check_the_payment_detail">Please carefully check the payment detail</string>
    <string name="below_and_click_next_to_complete_the">below and click next to complete the</string>
    <string name="payment">payment.</string>
    <string name="you_are_about_to_make_an_online_payment_please_carefully_check_the_payment_details_below_and_click_next_to_complete_the_payment">You are about to make an online payment. Please carefully check the payment details below and click next to complete the payment.</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="forward_slash">/</string>
    <string name="card_number">Card Number</string>
    <string name="_3_digit_pin">3 Digit Pin</string>
    <string name="pay">Pay</string>
    <string name="complaints">complaints</string>
    <string name="previous_complaints">Previous Complaints</string>
    <string name="tariff">Tariff</string>
    <string name="self_generation">Self-Generation</string>
    <string name="number_of_days">Number of Days</string>
    <string name="pick_start_and_end_dates">Pick start and end dates</string>
    <string name="units">Units</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="usage_charges">Usage Charges</string>
    <string name="fixed_charges">Fixed Charges</string>
    <string name="total_charge">Total Charge</string>
    <string name="charge_for_the_day">Charge for the Day</string>
    <string name="name">Name</string>
    <string name="calculate_bill">calculate Bill</string>
</resources>
