<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BankPayment">

    <include
        android:id="@+id/billPaymentToolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_activity"
            android:translationY="-50sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120sp"
                    android:orientation="vertical"
                    android:padding="16sp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:src="@drawable/hnb_logo" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cardNumberTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_number"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cardNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/bg_layouts"
                            android:drawableRight="@drawable/bg_layouts"
                            android:inputType="number"
                            android:longClickable="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cardExpiryDateTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_marginBottom="10sp"
                        android:hint="@string/expiry_date"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TableRow>

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/monthSpinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".5"
                                    android:entries="@array/months"
                                    android:focusable="true"
                                    android:focusableInTouchMode="true" />

                                <TextView
                                    android:text="@string/forward_slash"
                                    android:textSize="14sp" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/yearSpinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".5"
                                    android:entries="@array/years"
                                    android:focusable="true"
                                    android:focusableInTouchMode="true" />
                            </TableRow>
                        </TableLayout>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pinTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/_3_digit_pin"
                        app:errorEnabled="true"

                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pinEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/bg_layouts"
                            android:drawableRight="@drawable/bg_layouts"
                            android:inputType="numberPassword"
                            android:longClickable="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bankPayAmountTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Amount"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bankPayAmountEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:inputType="number"
                            android:longClickable="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/bankPayBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/toolbarColour"
                        android:backgroundTintMode="src_in"
                        android:elevation="6dp"
                        android:onClick="onClick"
                        android:text="@string/pay"
                        android:textColor="#fff" />

                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>